--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: Asociacion Robotech
-email: robotechurjc@gmail.com
+title: Grupo Scout Vatnajoküll
+email: gsvatnajokull@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "robotech.github.io" # the base hostname & protocol for your site
+url: "gsvatnajokull.github.io" # the base hostname & protocol for your site
 
-twitter_username: robotech_urjc
-github_username: RoboTech-URJC
+twitter_username: gsvatnajokull
+github_username: gsvatnajokull
 
 # Build settings
 markdown: kramdown
